benchmark/SpecGenBench/common_few_shot_jml_rac/compile_logs/PerimeterDriver.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/xiangxinzhong/Code/verification-project/benchmark/SpecGenBench/common_few_shot_jml/Perimeter/PerimeterDriver.java:12: error: cannot find symbol
		Perimeter p = new Perimeter();
		^
  symbol:   class Perimeter
  location: class PerimeterDriver
/Users/xiangxinzhong/Code/verification-project/benchmark/SpecGenBench/common_few_shot_jml/Perimeter/PerimeterDriver.java:12: error: cannot find symbol
		Perimeter p = new Perimeter();
		                  ^
  symbol:   class Perimeter
  location: class PerimeterDriver
2 errors
1 warning
